[package]
name = "ruinous"
authors.workspace = true
version.workspace = true
edition.workspace = true

[workspace.package]
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
version = "0.1.0"
edition = "2021"

[workspace.lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "warn"
pedantic = "warn"
style = "warn"

[dependencies]
ruinous-util = { path = "util" }

[dev-dependencies]
paste = "1.0.11"